Docs: Updated Jupyter Notbook

--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -40,11 +40,11 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
+        "outputId": "7a9d9fa5-8028-4745-d91e-2b42e115642a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "outputId": "fb468597-fd12-4454-d0e8-0dfeee6151f2"
+          "height": 34
+        }
       },
       "source": [
         "!pip install cereja --upgrade"
@@ -54,10 +54,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Collecting cereja\n",
-            "  Downloading https://files.pythonhosted.org/packages/2b/49/d967ec305185e18d74d2978b0b7fd2e2cbe5436735da0b9773c8c483a049/cereja-1.0.1-py3-none-any.whl\n",
-            "Installing collected packages: cereja\n",
-            "Successfully installed cereja-1.0.1\n"
+            "Requirement already up-to-date: cereja in /usr/local/lib/python3.6/dist-packages (1.0.5)\n"
           ],
           "name": "stdout"
         }
@@ -113,7 +110,7 @@
         "id": "w_6TLC0DxI1f",
         "colab_type": "code",
         "cellView": "both",
-        "outputId": "4c3dbc67-7c11-4ae6-d441-91cd46cd8725",
+        "outputId": "acf19a3d-de05-4d81-9058-ba0025b34e46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -122,36 +119,6 @@
       "source": [
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.is_iterable(my_var)"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bSJ69PuWiYGx",
-        "colab_type": "code",
-        "outputId": "716a552d-9b33-4261-9221-244e3f797f9c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "cj.is_iterable('hi')"
       ],
       "execution_count": 4,
       "outputs": [
@@ -166,6 +133,36 @@
             "tags": []
           },
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bSJ69PuWiYGx",
+        "colab_type": "code",
+        "outputId": "651c6464-051e-461f-bcab-f4862a630add",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "cj.is_iterable('hi')"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
@@ -186,7 +183,7 @@
       "metadata": {
         "id": "tAPeDiyRhzWS",
         "colab_type": "code",
-        "outputId": "9bdee8b7-0e33-4210-d915-06848e87eb9c",
+        "outputId": "e26235f6-3839-45fb-d5c9-40bda0d9382f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -195,7 +192,7 @@
       "source": [
         "cj.is_sequence([1,2,3])"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +204,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -216,7 +213,7 @@
       "metadata": {
         "id": "QrFmt6iOicEL",
         "colab_type": "code",
-        "outputId": "0e1fdd6a-4d01-4183-83b3-6df239cd6814",
+        "outputId": "c9127954-ba53-4ad7-ec95-e3730ce826f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -225,7 +222,7 @@
       "source": [
         "cj.is_sequence('hi')"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +234,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -269,7 +266,7 @@
         "v = (0, -2)\n",
         "cj.theta_angle(u, v)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +310,7 @@
         "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch)\n",
         "print(f\"items per batch with leftovers: {result}\")"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +343,7 @@
         "result = cj.group_items_in_batches(items=my_var, items_per_batch=num_items_per_batch, fill=\"cereja\")\n",
         "print(f\"fill values: {result}\")"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +370,7 @@
         "result = cj.group_items_in_batches(items=['a','b','c','d'], items_per_batch=2)\n",
         "print(f\"Other examples: {result}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +409,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"simple list: {my_var} --> {result}\")"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +437,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"list of list: {my_var} --> {result}\")"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,7 +465,7 @@
         "result = cj.remove_duplicate_items(my_var)\n",
         "print(f\"other example: {my_var} --> {result}\")"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +503,7 @@
         "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
         "cj.flatten(sequence)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +534,7 @@
         "sequence = [[1, 2, 3], [], [[2, [3], 4], 6]]\n",
         "cj.flatten(sequence, max_recursion=2)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +587,7 @@
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "print(freq)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +634,7 @@
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.most_freq(4)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +683,7 @@
         "freq = cj.Freq([1,2,3,3,4,5,6,7,6,7,12,31,123,5,3])\n",
         "freq.least_freq(4)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,6 +703,172 @@
             "tags": []
           },
           "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yxnOWQG8XUOA",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Progress\n",
+        "A simple way to display progress to the user"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0V7mg0nqi5Ot",
+        "colab_type": "text"
+      },
+      "source": [
+        "####Loading"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I82KgzCNjspd",
+        "colab_type": "text"
+      },
+      "source": [
+        "If you just need to inform the user that you are processing something"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YMWVgjjbXqYO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c0fa497d-30c1-44bb-8b70-3992cbc7641d"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "# Use to wait for some data that can be time consuming, but you don't know how long\n",
+        "with cj.Progress(\"Processing Test\") as prog:\n",
+        "    for i in range(1, 101):\n",
+        "        # You don't need to do anything else\n",
+        "        time.sleep(1/i)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "🍒 Processing Test: Awaiting ... Done! ✅ - Time: 5.52s"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a-QUB5_xi-Cc",
+        "colab_type": "text"
+      },
+      "source": [
+        "####Default Progress"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HqiI2fOHjeQB",
+        "colab_type": "text"
+      },
+      "source": [
+        "Update the percentage by the end of the task"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zizXGDXIZr2l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d9221ca4-a3f6-43e5-c0cc-23453ff5d319"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "# Use to wait for some data that can be time consuming, but you don't know how long\n",
+        "with cj.Progress(\"Loading Test With Percent\") as prog:\n",
+        "    for i in range(1, 101):\n",
+        "        time.sleep(1/i)\n",
+        "        # You just need to update the percentage\n",
+        "        prog.set_percent(i)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "🍒 Loading Test With Percent: [...] Done! ✅ - Time: 5.53s"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lNFNYcXej-EV",
+        "colab_type": "text"
+      },
+      "source": [
+        "####Progress Bar"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tweDNzEMkAIA",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is classic"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OTHG0NRTaAfz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c9c0ab06-8724-4b77-cf3f-aaba4011b8df"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "# Use to wait for some data that can be time consuming, but you don't know how long\n",
+        "with cj.Progress(\"Progress Bar Test\", style=\"bar\") as prog:\n",
+        "    for i in range(1, 101):\n",
+        "        time.sleep(1/i)\n",
+        "        # You just need to update the percentage\n",
+        "        prog.set_percent(i)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "🍒 Progress Bar Test: [==============================] Done! ✅ - Time: 5.52s"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -749,7 +912,7 @@
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +968,7 @@
         "\n",
         "cj.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +1017,7 @@
         "result = cj.file_name(file_path=my_file_path, with_ext=True)\n",
         "print(f\"file_path: {my_file_path} --> {result}\")"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
