Updated Docs Colaboratory

--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
-        "outputId": "7a9d9fa5-8028-4745-d91e-2b42e115642a",
+        "outputId": "88a401d7-a3b0-4af7-9c6c-fab1f7873f8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -54,7 +54,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Requirement already up-to-date: cereja in /usr/local/lib/python3.6/dist-packages (1.0.5)\n"
+            "Requirement already up-to-date: cereja in /usr/local/lib/python3.6/dist-packages (1.0.6)\n"
           ],
           "name": "stdout"
         }
@@ -110,7 +110,7 @@
         "id": "w_6TLC0DxI1f",
         "colab_type": "code",
         "cellView": "both",
-        "outputId": "acf19a3d-de05-4d81-9058-ba0025b34e46",
+        "outputId": "ebae3af6-97f5-4a5d-c19d-d5ebd0fbf6f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -120,7 +120,7 @@
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.is_iterable(my_var)"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -150,7 +150,7 @@
       "source": [
         "cj.is_iterable('hi')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
       "source": [
         "cj.is_sequence([1,2,3])"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -222,7 +222,7 @@
       "source": [
         "cj.is_sequence('hi')"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,11 +742,11 @@
       "metadata": {
         "id": "YMWVgjjbXqYO",
         "colab_type": "code",
+        "outputId": "cb5ffe0d-9765-40d5-b3c4-6164da6cb7f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c0fa497d-30c1-44bb-8b70-3992cbc7641d"
+        }
       },
       "source": [
         "import time\n",
@@ -755,14 +755,16 @@
         "with cj.Progress(\"Processing Test\") as prog:\n",
         "    for i in range(1, 101):\n",
         "        # You don't need to do anything else\n",
+        "\n",
+        "        # simulating waiting for processing\n",
         "        time.sleep(1/i)"
       ],
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Processing Test: Awaiting ... Done! ✅ - Time: 5.52s"
+            "🍒 Processing Test: Awaiting ... Done! ✅ - Time: 5.52s\n"
           ],
           "name": "stdout"
         }
@@ -793,11 +795,11 @@
       "metadata": {
         "id": "zizXGDXIZr2l",
         "colab_type": "code",
+        "outputId": "0b09263a-9c52-492f-a8b1-9ea4f145ae72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d9221ca4-a3f6-43e5-c0cc-23453ff5d319"
+        }
       },
       "source": [
         "import time\n",
@@ -805,16 +807,19 @@
         "# Use to wait for some data that can be time consuming, but you don't know how long\n",
         "with cj.Progress(\"Loading Test With Percent\") as prog:\n",
         "    for i in range(1, 101):\n",
+        "\n",
+        "        # simulating waiting for processing\n",
         "        time.sleep(1/i)\n",
+        "        \n",
         "        # You just need to update the percentage\n",
-        "        prog.set_percent(i)"
+        "        prog.update(current_value=i)"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Loading Test With Percent: [...] Done! ✅ - Time: 5.53s"
+            "🍒 Loading Test With Percent: [...] Done! ✅ - Time: 5.52s\n"
           ],
           "name": "stdout"
         }
@@ -845,11 +850,11 @@
       "metadata": {
         "id": "OTHG0NRTaAfz",
         "colab_type": "code",
+        "outputId": "37b43a91-d590-4277-f5da-7d065d062ea6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c9c0ab06-8724-4b77-cf3f-aaba4011b8df"
+        }
       },
       "source": [
         "import time\n",
@@ -857,16 +862,121 @@
         "# Use to wait for some data that can be time consuming, but you don't know how long\n",
         "with cj.Progress(\"Progress Bar Test\", style=\"bar\") as prog:\n",
         "    for i in range(1, 101):\n",
+        "\n",
+        "        # simulating waiting for processing\n",
         "        time.sleep(1/i)\n",
+        "\n",
         "        # You just need to update the percentage\n",
-        "        prog.set_percent(i)"
+        "        prog.update(current_value=i)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "🍒 Progress Bar Test: [==============================] Done! ✅ - Time: 5.52s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u-1kd_xH2Qw9",
+        "colab_type": "text"
+      },
+      "source": [
+        "####Many tasks"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gIHoEUgX2QCg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "ed5d9499-e264-4933-cad5-1576c9699ff7"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "with cj.Progress(task_name=\"Progress Bar Test\", max_value=500) as bar:\n",
+        "    for i in range(1, 500):\n",
+        "        time.sleep(1 / i)\n",
+        "        bar.update(i)\n",
+        "        \n",
+        "    # in an abstract way we identified that the previous task ended.\n",
+        "    for i in range(1, 400):\n",
+        "        time.sleep(1 / i)\n",
+        "        bar.update(i, max_value=400)"
       ],
       "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Progress Bar Test: [==============================] Done! ✅ - Time: 5.52s"
+            "🍒 Progress Bar Test: [...] Done! ✅ - Time: 8.03s\n",
+            "🍒 Progress Bar Test: [...] Done! ✅ - Time: 14.05s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Js2irOqfyjR2",
+        "colab_type": "text"
+      },
+      "source": [
+        "####Without with statment\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrIryag01IRt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "50f56035-ac29-43a0-fc59-d52359dabc0f"
+      },
+      "source": [
+        "import time\n",
+        "\n",
+        "bar = cj.Progress()\n",
+        "\n",
+        "# Init First Task\n",
+        "bar.start(task_name=\"Task-1\")\n",
+        "for i in range(1, 500):\n",
+        "    time.sleep(1 / i)\n",
+        "    bar.update(i, max_value=500)\n",
+        "bar.stop()\n",
+        "\n",
+        "# Init Second task\n",
+        "bar.start(task_name=\"Task-2\")\n",
+        "for i in range(1, 400):\n",
+        "    time.sleep(1 / i)\n",
+        "    bar.update(i, max_value=400)\n",
+        "bar.stop()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "🍒 Progress Tool: Created!\n",
+            "🍒 Task-1: [...] Done! ✅ - Time: 9.73s\n",
+            "🍒 Task-2: [...] Done! ✅ - Time: 16.76s\n"
           ],
           "name": "stdout"
         }
