--- a/docs/cereja_example.ipynb
+++ b/docs/cereja_example.ipynb
@@ -6,7 +6,6 @@
       "name": "cereja_example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,10 +39,10 @@
       "metadata": {
         "id": "B1qNEuxZwVs_",
         "colab_type": "code",
-        "outputId": "88a401d7-a3b0-4af7-9c6c-fab1f7873f8c",
+        "outputId": "b85b9e4a-2656-4e3a-e340-0c69e0347601",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 127
         }
       },
       "source": [
@@ -54,7 +53,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Requirement already up-to-date: cereja in /usr/local/lib/python3.6/dist-packages (1.0.6)\n"
+            "Collecting cereja\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/24/8e/463ebc639b58081eb7abc78c4c8957e4ca3d44dff2dc660eb504c96b81d7/cereja-1.1.1-py3-none-any.whl (42kB)\n",
+            "\r\u001b[K     |███████▊                        | 10kB 18.4MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 30kB 2.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.7MB/s \n",
+            "\u001b[?25hInstalling collected packages: cereja\n",
+            "Successfully installed cereja-1.1.1\n"
           ],
           "name": "stdout"
         }
@@ -75,13 +78,25 @@
       "metadata": {
         "id": "KhRIV54DxZ6Z",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "29a739a8-a10f-4daf-8bad-5ad99e66b80b"
       },
       "source": [
         "import cereja as cj"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[31m🍒\u001b[30m 1.1.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -120,7 +135,7 @@
         "my_var = [1,2,3] # change value and execute the cell\n",
         "cj.is_iterable(my_var)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,10 +757,10 @@
       "metadata": {
         "id": "YMWVgjjbXqYO",
         "colab_type": "code",
-        "outputId": "cb5ffe0d-9765-40d5-b3c4-6164da6cb7f0",
+        "outputId": "15cc0d5f-4115-4300-f5cc-2ab88483f1cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 91
         }
       },
       "source": [
@@ -759,12 +774,14 @@
         "        # simulating waiting for processing\n",
         "        time.sleep(1/i)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Processing Test: Awaiting ... Done! ✅ - Time: 5.52s\n"
+            "\u001b[31m🍒\u001b[34m Processing Test \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 5.21s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n"
           ],
           "name": "stdout"
         }
@@ -795,10 +812,10 @@
       "metadata": {
         "id": "zizXGDXIZr2l",
         "colab_type": "code",
-        "outputId": "0b09263a-9c52-492f-a8b1-9ea4f145ae72",
+        "outputId": "26efee6f-b27f-47a7-8de3-e297137e6904",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 91
         }
       },
       "source": [
@@ -814,12 +831,14 @@
         "        # You just need to update the percentage\n",
         "        prog.update(current_value=i)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Loading Test With Percent: [...] Done! ✅ - Time: 5.52s\n"
+            "\u001b[31m🍒\u001b[34m Loading Test With Percent \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 5.21s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n"
           ],
           "name": "stdout"
         }
@@ -850,10 +869,10 @@
       "metadata": {
         "id": "OTHG0NRTaAfz",
         "colab_type": "code",
-        "outputId": "37b43a91-d590-4277-f5da-7d065d062ea6",
+        "outputId": "1497f381-5d6a-4990-872f-436aa9d10e1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 91
         }
       },
       "source": [
@@ -869,12 +888,14 @@
         "        # You just need to update the percentage\n",
         "        prog.update(current_value=i)"
       ],
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Progress Bar Test: [==============================] Done! ✅ - Time: 5.52s\n"
+            "\u001b[31m🍒\u001b[34m Progress Bar Test \u001b[36m»\u001b[37m \u001b[37m[==============================] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 5.2s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n"
           ],
           "name": "stdout"
         }
@@ -895,11 +916,11 @@
       "metadata": {
         "id": "gIHoEUgX2QCg",
         "colab_type": "code",
+        "outputId": "10c6e29d-1623-4686-ab04-cc5eaa423447",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "ed5d9499-e264-4933-cad5-1576c9699ff7"
+          "height": 109
+        }
       },
       "source": [
         "import time\n",
@@ -914,13 +935,15 @@
         "        time.sleep(1 / i)\n",
         "        bar.update(i, max_value=400)"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Progress Bar Test: [...] Done! ✅ - Time: 8.03s\n",
-            "🍒 Progress Bar Test: [...] Done! ✅ - Time: 14.05s\n"
+            "\u001b[31m🍒\u001b[34m Progress Bar Test \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Estimated: 0.02s\u001b[37m \u001b[37m\n",
+            "\u001b[31m🍒\u001b[34m Progress Bar Test \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 5.62s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n"
           ],
           "name": "stdout"
         }
@@ -944,11 +967,11 @@
       "metadata": {
         "id": "XrIryag01IRt",
         "colab_type": "code",
+        "outputId": "501364e4-5e14-48bd-d285-d51fdde6508a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "50f56035-ac29-43a0-fc59-d52359dabc0f"
+          "height": 163
+        }
       },
       "source": [
         "import time\n",
@@ -956,27 +979,31 @@
         "bar = cj.Progress()\n",
         "\n",
         "# Init First Task\n",
-        "bar.start(task_name=\"Task-1\")\n",
+        "bar.start()\n",
         "for i in range(1, 500):\n",
         "    time.sleep(1 / i)\n",
         "    bar.update(i, max_value=500)\n",
         "bar.stop()\n",
         "\n",
         "# Init Second task\n",
-        "bar.start(task_name=\"Task-2\")\n",
+        "bar.start()\n",
         "for i in range(1, 400):\n",
         "    time.sleep(1 / i)\n",
         "    bar.update(i, max_value=400)\n",
         "bar.stop()"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "🍒 Progress Tool: Created!\n",
-            "🍒 Task-1: [...] Done! ✅ - Time: 9.73s\n",
-            "🍒 Task-2: [...] Done! ✅ - Time: 16.76s\n"
+            "\u001b[31m🍒\u001b[34m Progress Tool \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 6.85s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n",
+            "\u001b[31m🍒\u001b[34m Progress Tool \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Estimated: 0.0s\u001b[37m \u001b[37m\n",
+            "\u001b[31m🍒\u001b[34m Progress Tool \u001b[36m»\u001b[37m \u001b[37m[...] 100% - \u001b[32m✅ Done!\u001b[37m - 🕜 Total: 5.62s\u001b[37m \u001b[37m\n",
+            "\n",
+            "\u001b[31m🍒\u001b[34m Cereja \u001b[36m»\u001b[37m \u001b[37mCereja's console \u001b[31mout!\u001b[37m\u001b[37m\u001b[37m \u001b[37m\n"
           ],
           "name": "stdout"
         }
@@ -1008,10 +1035,10 @@
       "metadata": {
         "id": "8faV1ZV9BN1w",
         "colab_type": "code",
-        "outputId": "95a6276b-8fc1-42d3-a2f0-153f5953ca1b",
+        "outputId": "cd972d06-0170-47d4-b935-cd08037f727f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 91
         }
       },
       "source": [
@@ -1022,14 +1049,14 @@
         "\n",
         "my_function(\"Hi Cereja\")"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "INFO:cereja.utils:Update log level to INFO\n",
             "Hi Cereja\n",
-            "INFO:cereja.decorators:[my_function] performed 5.9604644775390625e-05\n"
+            "INFO:cereja.decorators:[my_function] performed 0.0004963874816894531\n"
           ],
           "name": "stdout"
         }
@@ -1062,10 +1089,10 @@
       "metadata": {
         "id": "qxpaAczOCxCn",
         "colab_type": "code",
-        "outputId": "b8a3dfcf-0d3a-4731-f176-e1cfd2ae06b4",
+        "outputId": "f71622a2-8899-469e-e40c-6fb1b9aecd79",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 109
         }
       },
       "source": [
@@ -1078,7 +1105,7 @@
         "\n",
         "cj.group_path_from_dir(dir_path=my_dir, num_items_on_tuple=2, ext_file=my_ext_file)"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1093,7 +1120,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 14
         }
       ]
     },
